--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>Class Profile</title>
+        <script src="./build/bundle.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body class="content">
     {{ content }}
