Base typography classes

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,8 @@
     <head>
         <title>Class Profile</title>
         <script src="./build/bundle.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Roboto:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body class="content">
     {{ content }}
