--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,8 +4,10 @@
     <head>
         <title>Class Profile</title>
         <script src="./build/bundle.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Roboto:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Source+Code+Pro:700" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body class="content">
     {{ content }}
