Added include sectinos

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -64,6 +64,7 @@ section {
         padding: 32px 0;
         max-width: $content-width;
         width: 100%;
+        min-height: 100vh;
     }
 }
 
