--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,15 +18,24 @@ body {
     font-weight: 300;
 }
 
+p {
+  width: 70%;
+  line-height: 1.8;
+  font-size: 18px;
+  font-weight: 300;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
+    margin-bottom: 16px;
 }
 
 h1 {
     font-family: 'Source Code Pro', monospace;
-    font-size: 40px;
+    font-size: 72px;
     letter-spacing: -2px;
+    margin-bottom: 32px;
 }
 
 h2 {
@@ -35,16 +44,22 @@ h2 {
 
 h3 {
     font-size: 24px;
+    opacity: 0.9;
 }
 
 h4 {
-    font-size: 20px;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    opacity: 0.6;
+    margin-bottom: 4px;
 }
 
 h5 {
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 1.2px;
+    margin-bottom: 4px;
 }
 
 h6 {
@@ -61,23 +76,29 @@ section {
 
     .content {
         margin: 0px auto;
-        padding: 32px 0;
+        padding: 15% 0;
         max-width: $content-width;
-        width: 100%;
-        min-height: 100vh;
+        width: 80%;
+        min-height: 100%;
+        position: relative;
     }
+}
+
+/* TODO: Maybe have a third/2third? */
+.half {
+  vertical-align: top;
 }
 
 @media screen and (min-width: 800px) {
     .half {
         display: inline-block;
         width: 42%;
-        padding: 16px 7% 16px 0;
+        padding: 0 7% 16px 0;
     }
 
     .second {
         width: 42%;
-        padding: 16px 4% 16px 3%;
+        padding: 0 4% 16px 3%;
     }
 }
 
@@ -90,6 +111,22 @@ section {
 
     .second {
     }
+}
+
+.third {
+  width: 28%;
+}
+
+.two-third {
+  width: 56%;
+}
+
+.bg-hero {
+  background-color: #0099ff;
+  height: 100vh;
+  .content {
+    padding: 0;
+  }
 }
 
 /* COLORS */
@@ -111,4 +148,26 @@ section {
 
 .bg-5 {
     background-color: $bg-5;
+}
+
+.vb { /* Vertical buffer */
+  height: 32px;
+  width: 100%;
+  display: block;
+}
+
+.vbx2 {
+  height: 64px;
+}
+
+.vbx3 {
+  height: 96px;
+}
+
+.vbx4 {
+  height: 128px;
+}
+
+.hvb {
+  height: 16px;
 }
