Annotate all of the graphs needed

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -35,6 +35,7 @@ h1 {
     font-family: 'Source Code Pro', monospace;
     font-size: 72px;
     letter-spacing: -2px;
+    font-weight: 400;
     margin-bottom: 32px;
 }
 
