--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -6,6 +6,33 @@ p {
   color: rgba(255,255,255,.8);
 }
 
+.title {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 72px;
+  letter-spacing: -2px;
+  line-height: 1.2;
+  position: absolute;
+  top: 85%;
+  transform: translate(0, -100%);
+}
+
+.subtitle {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 24px;
+  letter-spacing: -1px;
+  line-height: 1.2;
+  position: absolute;
+  top: 85%;
+  transform: translate(0, 50%);
+  color: rgba(255,255,255,.5);
+}
+
+@media screen and (max-width: 820px) {
+  .title {
+    font-size: 48px;
+  }
+}
+
 span.big {
   font-size: 1.5em;
   display: block;
