Add more sections, fix cover photo

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -69,7 +69,7 @@ section {
 }
 
 .bg-hero {
-  background-image:url('/img/hero.png');
+  background-image:url('../img/hero.png');
   background-repeat:no-repeat;
   background-size:cover;
   background-color: #3D454D;
