--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,5 +1,5 @@
 p {
-  width: 70%;
+  width: 80%;
   line-height: 1.8;
   font-size: 18px;
   font-weight: 300;
@@ -25,6 +25,16 @@ p {
   top: 85%;
   transform: translate(0, 50%);
   color: rgba(255,255,255,.5);
+}
+
+.graph-title {
+  display: block;
+  text-align: center;
+  font-family: 'Source Code Pro', monospace;
+  width: 100%;
+  font-size: 14px;
+  padding-bottom: 16px;
+  opacity: 0.4;
 }
 
 @media screen and (max-width: 820px) {
