--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -8,7 +8,7 @@ p {
 
 .title {
   font-family: 'Source Code Pro', monospace;
-  font-size: 72px;
+  font-size: 64;
   letter-spacing: -2px;
   line-height: 1.2;
   position: absolute;
@@ -70,7 +70,7 @@ h1 {
 }
 
 h2 {
-    font-size: 32px;
+    font-size: 28px;
     margin-bottom: 32px;
 }
 
