--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,13 @@
         <title>Class Profile</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Source+Code+Pro:600" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-
+        <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./img/favicon/site.webmanifest">
+        <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body class="content">
