--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,11 +1,3 @@
-p {
-  width: 80%;
-  line-height: 1.8;
-  font-size: 18px;
-  font-weight: 300;
-  color: rgba(255,255,255,.8);
-}
-
 .title {
   font-family: 'Source Code Pro', monospace;
   font-size: 64;
@@ -27,6 +19,15 @@ p {
   color: rgba(255,255,255,.5);
 }
 
+p {
+  width: 80%;
+  line-height: 1.8;
+  font-size: 18px;
+  font-weight: 300;
+  color: rgba(255,255,255,.8);
+}
+
+
 .graph-title {
   display: block;
   text-align: center;
@@ -37,17 +38,12 @@ p {
   opacity: 0.4;
 }
 
-@media screen and (max-width: 820px) {
-  .title {
-    font-size: 48px;
-  }
-}
-
 span.big {
-  font-size: 1.3em;
+  font-size: 22px;
   display: block;
   margin-bottom: 8px;
   color: rgba(255,255,255,1);
+  line-height: 1.8;
 }
 
 a {
@@ -56,49 +52,81 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
-    margin-bottom: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  margin-bottom: 16px;
+  line-height: 1.2;
 }
 
 h1 {
-    font-family: 'Source Code Pro', monospace;
-    font-size: 72px;
-    letter-spacing: -2px;
-    font-weight: 400;
-    margin-bottom: 32px;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 48px;
+  letter-spacing: -2px;
+  font-weight: 400;
+  margin-bottom: 32px;
 }
 
 h2 {
-    font-size: 28px;
-    margin-bottom: 32px;
+  font-size: 28px;
+  margin-bottom: 32px;
 }
 
 h3, h4 {
-    font-size: 16px;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    opacity: 0.6;
-    font-weight: 700;
-    margin-bottom: 4px;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  opacity: 0.6;
+  font-weight: 700;
+  margin-bottom: 4px;
 }
 
 h5 {
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
-    margin-bottom: 4px;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  margin-bottom: 4px;
 }
 
 h6 {
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
-    font-weight: 400;
-    color: #999
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
+  font-weight: 400;
+  color: #999
 }
 
 b {
   font-weight: 700;
   color: rgba(255,255,255,1);
+}
+
+@media screen and (max-width: 820px) {
+  .title {
+    font-size: 48px;
+  }
+
+  p {
+    font-size: 16px;
+    width: 100%;
+  }
+
+  span.big {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3, h4 {
+    font-size: 12px;
+  }
+
+  h5, h6 {
+    font-size: 10px;
+  }
 }
