--- a/_sass/outcome.scss
+++ b/_sass/outcome.scss
@@ -8,6 +8,7 @@
 
 .path-item {
   width: 100%;
+  padding-bottom: 32px;
 
 }
 
@@ -43,4 +44,21 @@
   font-weight: 300;
   font-size: 16px;
   opacity: 0.5;
+  line-height: 1.3;
+}
+
+@media screen and (max-width: 820px) {
+  .path-photo {
+    width: 24%;
+  }
+
+  .path-photo img {
+    height: auto;
+    width: 100%;
+  }
+
+  .path-text {
+    padding-top: 8px;
+    width: 70%;
+  }
 }
