Added luisa, added grade vs salary

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,7 +5,7 @@ $content-width: 1200px;
 $bg-1: #324c67;
 $bg-2: #294766;
 $bg-3: #2E6399;
-$bg-4: #F2F9FF;
+$bg-4: #165050;
 $bg-5: #383040;
 $bg-6: #586e75;
 $bg-7: #073642;
