--- a/_sass/charts.scss
+++ b/_sass/charts.scss
@@ -49,16 +49,16 @@ g.tick line {
   line-height: 32px;
   text-align: center;
   width: 32px;
-  color: #333;
+  color: rgba(0,0,0,0.5);
   border-radius: 50%;
   margin: 2px 2px;
   cursor: pointer;
-  box-shadow: 0px 3px 2px rgba(0,0,0,.2);
+  box-shadow: 0px 3px 2px rgba(0,0,0,.4);
   transition: 0.2s ease;
 }
 
 .scale-item:hover {
-  box-shadow: 0px 5px 3px rgba(0,0,0,.2);
+  box-shadow: 0px 5px 3px rgba(0,0,0,.4);
 }
 
 .c1 {
