--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -154,17 +154,36 @@ b {
   line-height: 36px;
 }
 
-.cloud-small {
+.cloud-not-enjoyed {
   color: rgb(153, 153, 153);
+  font-size: 12px;
+  mix-blend-mode: color-dodge;
+}
+
+.cloud-enjoyed {
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  mix-blend-mode: color-dodge;
+  padding-right: 32px;
+}
+
+.cloud-less {
+  color: rgb(200, 200, 200);
   font-size: 12px;
   line-height: 36px;
   mix-blend-mode: color-dodge;
-  padding-right: 8px;
 }
 
-.cloud-big {
-  color: rgb(230, 230, 230);
+.cloud-more {
+  color: rgb(200, 200, 200);
   font-size: 24px;
   line-height: 36px;
   mix-blend-mode: color-dodge;
+}
+
+@media screen and (max-width: 820px) {
+  .cloud-small,
+  .cloud-big {
+    display: block;
+  }
 }
