--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -164,7 +164,6 @@ b {
   color: rgb(255, 255, 255);
   font-size: 12px;
   mix-blend-mode: color-dodge;
-  padding-right: 32px;
 }
 
 .cloud-less {
@@ -172,6 +171,13 @@ b {
   font-size: 12px;
   line-height: 36px;
   mix-blend-mode: color-dodge;
+}
+
+.cloud-1, .cloud-2 {
+  display: inline-block;
+  .cloud-enjoyed {
+    padding-right: 32px;
+  }
 }
 
 .cloud-more {
@@ -182,8 +188,10 @@ b {
 }
 
 @media screen and (max-width: 820px) {
-  .cloud-small,
-  .cloud-big {
+  .cloud-1, .cloud-2 {
     display: block;
+    .cloud-enjoyed {
+      padding-right: 0px;
+    }
   }
 }
