Use minified bundle

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -17,5 +17,5 @@
     <body class="content">
     {{ content }}
     </body>
-    <script src="./build/bundle.js"></script>
+    <script src="./build/bundle.min.js"></script>
 </html>
