--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -23,6 +23,7 @@
         <meta name="og:title" content="UW Software Engineering 2018 Class Profile">
         <meta name="og:description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <meta name="og:type" content="website">
+        <meta property="og:url" content="https://andyzhang.net/classprofile" />
     </head>
     <body class="content">
     {{ content }}
