--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,5 +1,6 @@
 .title {
   font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
   font-size: 64;
   letter-spacing: -2px;
   line-height: 1.2;
@@ -10,6 +11,7 @@
 
 .subtitle {
   font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
   font-size: 24px;
   letter-spacing: -1px;
   line-height: 1.2;
@@ -32,6 +34,7 @@ p {
   display: block;
   text-align: center;
   font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
   width: 100%;
   font-size: 14px;
   padding-bottom: 16px;
@@ -60,9 +63,9 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
   font-size: 48px;
   letter-spacing: -2px;
-  font-weight: 400;
   margin-bottom: 32px;
 }
 
@@ -193,5 +196,21 @@ b {
     .cloud-enjoyed {
       padding-right: 0px;
     }
+  }
+}
+
+.toc {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.5;
+  .nested {
+    line-height: 1.3;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    padding-left: 22px;
+    font-weight: 300;
+    opacity: 0.7;
+    padding-bottom: 16px;
   }
 }
