Add class photo

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -145,6 +145,18 @@ section {
   height: 128px;
 }
 
+.vbx6 {
+  height: 160px;
+}
+
 .hvb {
   height: 16px;
+}
+
+.class-photo {
+  width: 100%;
+}
+
+.class-photo img {
+  width: 100%;
 }
