--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -214,3 +214,10 @@ b {
     padding-bottom: 16px;
   }
 }
+
+.quote {
+  border-left: 1px solid rgba(255,255,255,0.5);
+  padding-left: 32px;
+  margin-top: 48px;
+  font-style: italic;
+}
