--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,7 +13,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:image" content="https://andyzhang.net/classprofile/img/meta.png">
+        <meta property="og:image" content="https://classprofile.andyzhang.net/img/meta.png">
         <!-- Search Engine -->
         <meta name="description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <!-- Schema.org for Google -->
@@ -23,7 +23,7 @@
         <meta name="og:title" content="UW Software Engineering 2018 Class Profile">
         <meta name="og:description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <meta name="og:type" content="website">
-        <meta property="og:url" content="https://andyzhang.net/classprofile" />
+        <meta property="og:url" content="https://classprofile.andyzhang.net" />
         <script>
           var host = "classprofile.andyzhang.net";
           if ((host == window.location.host) && (window.location.protocol != "https:"))
