--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 ---
 <html>
     <head>
-        <title>UW Software Engineering 2018 Class Profile</title>
+        <title>University of Waterloo Software Engineering 2018 Class Profile</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Source+Code+Pro:400,600" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
