--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -24,6 +24,8 @@
         <meta name="og:description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <meta name="og:type" content="website">
         <meta property="og:url" content="https://classprofile.andyzhang.net" />
+        <meta name="keywords" content="university of waterloo, uwaterloo,
+        software, engineering, class profile, salary, coop, school">
         <script>
           var host = "classprofile.andyzhang.net";
           if ((host == window.location.host) && (window.location.protocol != "https:"))
