Improve SEO for uwaterloo

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -15,13 +15,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:image" content="https://classprofile.andyzhang.net/img/meta.png">
         <!-- Search Engine -->
-        <meta name="description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta name="description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <!-- Schema.org for Google -->
-        <meta itemprop="name" content="UW Software Engineering 2018 Class Profile">
-        <meta itemprop="description" content="The Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta itemprop="name" content="University of Waterloo Software Engineering 2018 Class Profile">
+        <meta itemprop="description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
         <meta name="og:title" content="UW Software Engineering 2018 Class Profile">
-        <meta name="og:description" content="The UW Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta name="og:description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <meta name="og:type" content="website">
         <meta property="og:url" content="https://classprofile.andyzhang.net" />
         <meta name="keywords" content="university of waterloo, uwaterloo,
