--- a/_sass/charts.scss
+++ b/_sass/charts.scss
@@ -61,13 +61,13 @@ g.tick line {
   box-shadow: 0px 5px 3px rgba(0,0,0,.4);
 }
 
-.ethnicity-item {
+
+.loc-pre-item, .loc-post-item, .ethnicity-item {
   display: inline-block;
   font-family: 'Source Code Pro', monospace;
   height: 32px;
   line-height: 32px;
   text-align: center;
-  // width: 32px;
   padding-left: 5px;
   padding-right: 5px;
   color: rgba(0,0,0,0.5);
@@ -78,7 +78,7 @@ g.tick line {
   transition: 0.2s ease;
 }
 
-.ethnicity-item {
+.loc-pre-item:hover, .loc-post-item:hover, .ethnicity-item:hover {
   box-shadow: 0px 5px 3px rgba(0,0,0,.4);
 }
 
