--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -9,16 +9,13 @@
   transform: translate(0, -100%);
 }
 
-.university {
-}
-
 .subtitle {
   font-family: 'Source Code Pro', monospace;
   font-weight: 600;
   font-size: 24px;
   letter-spacing: -1px;
   line-height: 1.4;
-  color: rgba(255,255,255,.7);
+  color: rgba(71, 71, 71, .85);
 }
 
 p {
@@ -26,7 +23,7 @@ p {
   line-height: 1.8;
   font-size: 18px;
   font-weight: 300;
-  color: rgba(255,255,255,.8);
+  color: rgba(71, 71, 71, .9);
 }
 
 .graph-title {
@@ -44,12 +41,12 @@ span.big {
   font-size: 22px;
   display: block;
   margin-bottom: 8px;
-  color: rgba(255,255,255,1);
+  color: rgba(71, 71, 71, 1);
   line-height: 1.8;
 }
 
 a {
-  color: rgba(255,255,255,.8);
+  color: rgba(71, 71, 71, .9);
   text-decoration: underline;
 }
 
@@ -110,7 +107,7 @@ h6 {
 
 b {
   font-weight: 400;
-  color: rgba(255,255,255,1);
+  color: rgba(71, 71, 71, 1);
 }
 
 .center {
@@ -157,22 +154,19 @@ b {
 }
 
 .cloud-not-enjoyed {
-  color: rgb(153, 153, 153);
+  color: rgb(197, 197, 197);
   font-size: 12px;
-  mix-blend-mode: color-dodge;
 }
 
 .cloud-enjoyed {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-size: 12px;
-  mix-blend-mode: color-dodge;
 }
 
 .cloud-less {
-  color: rgb(200, 200, 200);
+  color:rgb(100, 99, 99);
   font-size: 12px;
   line-height: 36px;
-  mix-blend-mode: color-dodge;
 }
 
 .cloud-1, .cloud-2 {
@@ -183,10 +177,9 @@ b {
 }
 
 .cloud-more {
-  color: rgb(200, 200, 200);
+  color: rgb(100, 99, 99);
   font-size: 24px;
   line-height: 36px;
-  mix-blend-mode: color-dodge;
 }
 
 @media screen and (max-width: 820px) {
@@ -215,7 +208,7 @@ b {
 }
 
 .quote {
-  border-left: 1px solid rgba(255,255,255,0.5);
+  border-left: 1px solid rgba(71, 71, 71, .7);
   padding-left: 32px;
   margin-top: 48px;
   font-style: italic;
