Updated Meta Tags

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 ---
 <html>
     <head>
-        <title>University of Waterloo Software Engineering 2018 Class Profile</title>
+        <title>University of Waterloo Software Engineering 2021 Class Profile</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Source+Code+Pro:400,600" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
@@ -13,17 +13,17 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:image" content="https://classprofile.andyzhang.net/img/meta.png">
+        <meta property="og:image" content="https://sexxis.github.io/classprofile/img/meta.png">
         <!-- Search Engine -->
-        <meta name="description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta name="description" content="The University of Waterloo Software Engineering 2021 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <!-- Schema.org for Google -->
-        <meta itemprop="name" content="University of Waterloo Software Engineering 2018 Class Profile">
-        <meta itemprop="description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta itemprop="name" content="University of Waterloo Software Engineering 2021 Class Profile">
+        <meta itemprop="description" content="The University of Waterloo Software Engineering 2021 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-        <meta name="og:title" content="UW Software Engineering 2018 Class Profile">
-        <meta name="og:description" content="The University of Waterloo Software Engineering 2018 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
+        <meta name="og:title" content="UW Software Engineering 2021 Class Profile">
+        <meta name="og:description" content="The University of Waterloo Software Engineering 2021 Class Profile is a report that showcases who SE students are, what they've done, and how university went for them.">
         <meta name="og:type" content="website">
-        <meta property="og:url" content="https://classprofile.andyzhang.net" />
+        <meta property="og:url" content="https://sexxis.github.io/classprofile" />
         <meta name="keywords" content="university of waterloo, uwaterloo,
         software, engineering, class profile, salary, coop, school">
         <script>
