Added annendum sections

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -47,6 +47,16 @@ section {
         padding: 0 4% 16px 0;
     }
 
+    .third {
+      width: 24%;
+      display: inline-block;
+    }
+
+    .two-third {
+      width: 60%;
+      display: inline-block;
+    }
+
     .second {
         width: 42%;
         padding: 0 4% 16px 0;
