add exchange section (#20)
* add missing data row for relationship data

* update README with index details

* add exchange metadata (no details)

* add span.small stylings

* add data for students who went on exchange

* add geojson map render function

* allow json imports as any type

* add geojson world, exchange data

* represent exchange locations with map

* clarify content (PR comments), reduce map height, change header hierarchy

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -45,6 +45,14 @@ span.big {
   line-height: 1.8;
 }
 
+span.small {
+  font-size: 14px;
+  display: block;
+  margin-bottom: 4px;
+  color: rgba(71, 71, 71, 0.7);
+  line-height: 1.8;
+}
+
 a {
   color: rgba(71, 71, 71, .9);
   text-decoration: underline;
@@ -132,6 +140,10 @@ b {
 
   span.big {
     font-size: 18px;
+  }
+
+  span.small {
+    font-size: 10px;
   }
 
   h1 {
