Add Button to Jump to Table of Contents (#24)
Update ToC Text, Icon, Button to Sections

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -31,7 +31,12 @@
           if ((host == window.location.host) && (window.location.protocol != "https:"))
               window.location.protocol = "https";
         </script>
+        <script src="https://use.fontawesome.com/5306418b4e.js"></script>
     </head>
+    <a class="goto_toc" id="goto_toc" href="#toc">
+        <i class="fa fa-angle-double-up" aria-hidden="true"></i>
+        Sections
+    </a>
     <body class="content">
     {{ content }}
     </body>
