Add multi series box plot (#41)

--- a/_sass/charts.scss
+++ b/_sass/charts.scss
@@ -62,7 +62,7 @@ g.tick line {
 }
 
 
-.loc-pre-item, .loc-post-item, .ethnicity-item, .friends-gain-item {
+.loc-pre-item, .loc-post-item, .ethnicity-item, .friends-gain-item, .enriched-grades-item {
   display: inline-block;
   font-family: 'Source Code Pro', monospace;
   height: 32px;
