Some graphs for Coop section (#16)
* some coop graphs

* some rounding to better pretty graph

* add todos for graph data

* Add todos for the writeups

* more grphs with formatting and colors

* fix wording and get the word cloud working with how much students liked company

* fix wordings

* update todos

* clean up logs

* Fix box plot

* Add additional graphs & added some graph commentary

* Few fixes

* Update shared/multiserieshorizontalbarchart.js

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

* Update shared/linechart.js

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

* Update shared/linechart.js

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

* Update _sass/charts.scss

Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

* Fix some css issues

Co-authored-by: Roxane Fruytier <roxane.fruytier@hotmail.com>
Co-authored-by: Roxane <roxelo@users.noreply.github.com>
Co-authored-by: jaxonL <jaxon.lin@uwaterloo.ca>

--- a/_sass/charts.scss
+++ b/_sass/charts.scss
@@ -3,10 +3,18 @@ rect.bar {
   mix-blend-mode: difference;
 }
 
+#coop-cloud text {
+  mix-blend-mode: normal;
+}
+
 text {
-  fill: rgb(71, 71, 71);;
+  fill: rgb(71, 71, 71);
   mix-blend-mode: luminosity;
   font-family: 'Source Code Pro', monospace;
+  &.line-chart-label {
+    mix-blend-mode: normal;
+    font-size: 10px;
+  }
 }
 
 .arc text,
@@ -62,7 +70,7 @@ g.tick line {
 }
 
 
-.loc-pre-item, .loc-post-item, .ethnicity-item, .friends-gain-item, .enriched-grades-item {
+.loc-pre-item, .loc-post-item, .ethnicity-item, .friends-gain-item, .enriched-grades-item, .admission-salary-item {
   display: inline-block;
   font-family: 'Source Code Pro', monospace;
   height: 32px;
