chore: remove unused images (#44)
* rename hero -> cover

- includes bg-hero -> bg-cover class and html file

* remove outcome stories (from previous years) and images

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -80,7 +80,7 @@ section {
   width: 60%;
 }
 
-.bg-hero {
+.bg-cover {
   background-image:url('../img/cover.png');
   background-repeat:no-repeat;
   background-size:cover;
