style: lowercase graph titles (and other content changes) (#43)
* update readme with correct classprofile link

* fix typos

* lowercase all graph titles

- some changes to pie chart names to reflect the answers displayed
- some changes to label names to axes
- some content changes (typos, rewordings, punctuation)
- change male/female => men/women

* add punctuation to 'big' span text

- minor changes: add small disclaimer in lgbtq section
- minor rewordings

* move cat/dog section to misc

* change USA to US

see https://english.stackexchange.com/questions/159018/the-usa-vs-the-us

* address PR comments

- remove unasked question in readme
- cap Quebec
- rename graph to reflect data presented

* reword coop gender pay section (per PR comments)

* fix linechart labels

- make svg a bit larger if labels exceed width
- properly label the men/women salary chart
- fix typo and variable name 'collision'

* fix: typo for grouped barchart leading to errors

remove barOptions (unused/outdated)

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -27,7 +27,7 @@
         <meta name="keywords" content="university of waterloo, uwaterloo,
         software, engineering, class profile, salary, coop, school">
         <script>
-          var host = "classprofile.andyzhang.net";
+          var host = "sexxis.github.io/classprofile";
           if ((host == window.location.host) && (window.location.protocol != "https:"))
               window.location.protocol = "https";
         </script>
