--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -32,6 +32,14 @@
               window.location.protocol = "https";
         </script>
         <script src="https://use.fontawesome.com/5306418b4e.js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-5QQPN1K9C5"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-5QQPN1K9C5');
+        </script>
     </head>
     <a class="goto_toc" id="goto_toc" href="#toc">
         <i class="fa fa-angle-double-up" aria-hidden="true"></i>
